# DesicionFlow

./: .env.example  .gitignore  HOW_TO_USE.md  README-FRONTEND.md  README.md  SETUP.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_ready.ps1
.github/workflows/: ci.yml  deploy.yml
_bmad-output/: architecture.md  epics.md  frontend-plan.md  prd.md  project-context.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: __init__.py  main.py
app/agents/: base.py  bias_checker.py  clarifier.py  criteria_builder.py  decision_synthesizer.py  option_evaluator.py
app/api/: dependencies.py  health.py  ready.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  sanitization.py  versioning.py
app/evaluation/: __init__.py  comparison.py  golden.py  harness.py
app/llm/: __init__.py  client.py  prompts.py  retry.py
app/metrics/: __init__.py  collection.py  middleware.py
app/orchestration/: pipeline.py  runner.py  state.py
app/schemas/: __init__.py  agents.py  decision.py  errors.py  state.py  versioning.py
app/validation/: __init__.py  repair.py  schemas.py  service.py
docs/: README.md
frontend/: app.js  index.html  styles.css
prompts/: README.md
prompts/v1.0.0/: bias_checker.txt  clarifier.txt  criteria_builder.txt  decision_synthesizer.txt  option_evaluator.txt  repair.txt
scripts/: generate_openapi.py  run_eval_harness.py
tests/: __init__.py  conftest.py
tests/app/: __init__.py
tests/golden/: README.md
(+37 files in other folders)
